syntax="proto3";
package prt;

message RoomInfo {
	int32 ID = 1;
  	repeated UserInfo UserList = 2;
}

message UserInfo {
	int32 UserID = 1;
	string UserName = 2;
 	string IconURL = 3;
 	Weapon Weapon = 4;
 	int32 AttributeNum = 5;//属性点
}

//message Player {
//	int32 UserID = 1;
//	Weapon Weapon = 2;
//}

message Weapon {
  	int32 ID = 1;
  	int32 SN = 2;
  	repeated WeaponExtraAttr WeaponExtraAttrList = 3;
}

message WeaponExtraAttr {
	int32 AttrType = 1;//0-attack 1-attackSpeed 2-crit
	int32 Value = 2;
	
}
