syntax="proto3";
package prt;
import "dto.proto";

message GetReadyInfoReq {
}

message GetReadyInfoResp {
    int32 Code = 1;
    //repeated PlayerDTO PlayerList = 3;
    repeated UserInfoDTO UserList = 2;
}

message PrepareCombatReq {
	repeated WeaponExtraAttrDTO WeaponList = 1;
}

message PrepareCombatResp {
	 int32 Code = 1;
}
